tests/baselines/reference/noEmitOnError.errors.txt
tests/cases/compiler/noEmitOnError.ts(1,5): error TS2322: Type '""' is not assignable to type '数字'.


==== tests/cases/compiler/noEmitOnError.ts (1 errors) ====
    var x: number = "";
        ~
!!! error TS2322: Type '""' is not assignable to type '数字'.
    